# PL-homework-7-RUST-SQL

./: .env.example  .gitignore  Cargo.toml  README.md  RESOURCES.md  Rocket.toml  docker-compose.yml
migrations/: 0001_platforms_table.sql  0002_txs_table.sql  0002_upgrades_table.sql  0003_beers_table.sql  0003_txs_table.sql  0004_beers_table.sql  0005_edit_txs_table.sql
rocket_app/: Cargo.toml
rocket_app/src/: game_loop.rs  helper.rs  lib.rs  main.rs  schema.rs
rocket_app/src/handler/: beer_handler.rs  platform_handler.rs
rocket_app/src/ui_handler/: beer_handler.rs  common_handler.rs  mod.rs  platform_handler.rs
rocket_app/static/: websocketManager.js
rocket_app/templates/: base.html.tera  beers.html.tera  create_platform.html.tera  game_over.html.tera  index.html.tera  nav.html.tera
rocket_app/templates/error/: 400.html.tera  404.html.tera  500.html.tera
rocket_app/tests/: mod.rs  test_util.rs
rocket_app/tests/handler/: beer_handler_int_tests.rs  mod.rs  platform_handler_int_tests.rs
shared_db/: Cargo.toml
shared_db/src/: constants.rs  lib.rs  model.rs  test_util.rs
shared_db/src/repo/: beer_repo.rs  platform_repo.rs  transactions_repo.rs
shared_db/tests/: beer_repo_unit_tests.rs  mod.rs  platform_repo_unit_tests.rs  transaction_repo_unit_tests.rs
shared_db/tests/fixtures/: beers.sql  platforms.sql  (+1 more)
src/: constants.rs  game_loop.rs  helper.rs  main.rs  model.rs  schema.rs
src/handler/: beer_handler.rs  mod.rs  platform_handler.rs
src/repo/: beer_repo.rs  generic.rs  mod.rs  platform_repo.rs  transactions_repo.rs
src/ui_handler/: beer_handler.rs  common_handler.rs  platform_handler.rs
templates/: base.html.tera  beers.html.tera  index.html.tera
templates/error/: 400.html.tera
websocket_app/: Cargo.toml
websocket_app/src/: main.rs  real_time_sender.rs
(+1 files in other folders)
