[package]
name = "hw7_liskovskis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "bigdecimal"] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
async-trait = "0.1.74"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = "0.6.0"
lazy_static = "1.4.0"
tera = "1.19.1"
rocket_ws = "0.1.0"