[package]
name = "websocket_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "bigdecimal"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
async-trait = "0.1.74"
lazy_static = "1.4.0"
futures = "0.3.29"
tokio-tungstenite = "0.21.0"
log = "0.4.20"
futures-util = { version = "0.3.29", default-features = false, features = ["sink", "std"] }
env_logger = "0.10.1"

shared_db = { path = "../shared_db" }